# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_test_bazel_cpp_toolchains",
    version = "0.1.0",
)

# FIXME: Temporary workaround for Bazel 9.
#        Pin `rules_go` to 0.61.1 because a newer transitive `rules_go` version
#        pulled by upstream dependencies does not yet support Bazel 9.
#        Remove once upstream is updated.
bazel_dep(name = "rules_go", version = "0.61.1")

# *******************************************************************************
# Common useful functions and rules for Bazel
# *******************************************************************************
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# *******************************************************************************
# Constraint values for specifying platforms and toolchains
# *******************************************************************************
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")
git_override(
    module_name = "score_bazel_platforms",
    commit = "6c45a8f2a973fe396c392f727d9dae510692eb88",
    remote = "https://github.com/eclipse-score/bazel_platforms.git",
)

# *******************************************************************************
# C++ Rules for Bazel
# *******************************************************************************
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0")

# *******************************************************************************
# QNX unit-test runner (provides //src:run_under_qnx used to execute QNX test
# binaries under emulation via --run_under on the QNX configs).
# *******************************************************************************
bazel_dep(name = "score_qnx_unit_tests", version = "0.2.0", dev_dependency = True)

# *******************************************************************************
# Set dependency to Bazel C/C++ Toolchain repository - with overriding path
# *******************************************************************************
bazel_dep(
    name = "score_bazel_cpp_toolchains",
    version = "0.5.4",
)
local_path_override(
    module_name = "score_bazel_cpp_toolchains",
    path = "../",
)

# *******************************************************************************
# Init GCC extention
# Legend:
#     * CPU:   Control Processeor Unit
#     * OS:    Operating System
#     * V:     Version (GCC or SDP)
#     * ES:    Runtime-EcoSystem
#
# *******************************************************************************
gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)

# *******************************************************************************
# Setting default GCC (CPU:x86_64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_gcc_toolchain_bp",
    target_cpu = "x86_64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)

# *******************************************************************************
# Setting default GCC (CPU:x86_64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_gcc_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)

# *******************************************************************************
# Setting default GCC - local (CPU:x86_64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
# gcc.sdp(
#     name = "gcc_local_pkg",
#     build_file = "@score_bazel_cpp_toolchains//packages/linux/x86_64/gcc/12.2.0:gcc.BUILD",
#     path = "<PUT_YOUR_LOCAL_PATH_HERE>",
# )
# gcc.toolchain(
#     name = "score_gcc_toolchain_local",
#     target_cpu = "x86_64",
#     target_os = "linux",
#     sdp_to_link = "gcc_local_pkg",
#     version = "15.3.0",
# )

# *******************************************************************************
# Setting default GCC (CPU:aarch64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_aarch64_gcc_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)

# *******************************************************************************
# Setting custom GCC (CPU:x86_64|OS:Linux|V:12.2.0|ES:posix)
# *******************************************************************************
gcc.sdp(
    name = "my_toolchain_pkg",
    build_file = "@score_bazel_cpp_toolchains//packages/linux/x86_64/gcc/12.2.0:gcc.BUILD",
    sha256 = "457f5f20f57528033cb840d708b507050d711ae93e009388847e113b11bf3600",
    strip_prefix = "x86_64-unknown-linux-gnu",
    url = "https://github.com/eclipse-score/toolchains_gcc_packages/releases/download/0.0.1/x86_64-unknown-linux-gnu_gcc12.tar.gz",
)
gcc.toolchain(
    name = "my_toolchain",
    extra_link_flags = [
        "-lpthread",
    ],
    sdp_to_link = "my_toolchain_pkg",
    target_cpu = "x86_64",
    target_os = "linux",
    version = "12.2.0",
)

# *******************************************************************************
# Setting GCC (CPU:x86_64|OS:QNX|version(sdp):8.0.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_qcc_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
)

# *******************************************************************************
# Setting GCC (CPU:aarch64|OS:QNX|version(sdp):8.0.0|ES:posix)
# *******************************************************************************
gcc.toolchain(
    name = "score_qcc_arm_toolchain",
    sdp_version = "8.0.4",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
)

# *******************************************************************************
# Setting AutoSD 10 GCC (CPU:x86_64|OS:Linux|ES:autosd10)
# *******************************************************************************
gcc.toolchain(
    name = "score_autosd_10_toolchain",
    runtime_ecosystem = "autosd10",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
)

# *******************************************************************************
# Setting EBcLfSA 0.1.0 GCC (CPU:aarch64|OS:Linux|V:ebclfsa-0.1.0|ES:ebclfsa)
# *******************************************************************************
gcc.toolchain(
    name = "score_ebclfsa_toolchain",
    runtime_ecosystem = "ebclfsa",
    sdk_version = "0.1.0",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
)
use_repo(
    gcc,
    "my_toolchain",
    "score_aarch64_gcc_toolchain",
    "score_autosd_10_toolchain",
    "score_ebclfsa_toolchain",
    "score_gcc_toolchain",
    "score_gcc_toolchain_bp",
    "score_qcc_arm_toolchain",
    "score_qcc_arm_toolchain_pkg",
    "score_qcc_toolchain",
    "score_qcc_toolchain_pkg",
    # "score_gcc_toolchain_local",
    # "gcc_local_pkg",
)

# *******************************************************************************
# Set dependency to Bazel ImageFS repository
# *******************************************************************************
bazel_dep(name = "score_rules_imagefs", version = "0.0.3", dev_dependency = True)

# *******************************************************************************
# Setting ImageFS toolchains (CPU:x86_64|OS:QNX|version(sdp):8.0.0)
# *******************************************************************************
imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)

# *******************************************************************************
# Setting ImageFS toolchains (CPU:aarch64|OS:QNX|version(sdp):8.0.0)
# *******************************************************************************
imagefs.toolchain(
    name = "score_qnx_aarch64_ifs_toolchain",
    sdp_to_import = "@score_qcc_arm_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(imagefs, "score_qnx_aarch64_ifs_toolchain", "score_qnx_x86_64_ifs_toolchain")
